cluster/kubernetes/apps/external/webhook/ingress/webhook-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-ingress
  namespace: external
  annotations:
    gatus.home-operations.com/enabled: 'true'
    gatus.home-operations.com/endpoint: |
      name: webhook
spec:
  hostnames:
    - webhook.cjsolsen.com
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: webhook-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook
          port: 8080
